# cryptotracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  prestart.sh  pyproject.toml
app/: currency_trade_volume_service.py  currency_trade_volume_store.py  di.py  livecoin_api.py  mailer.py  main.py  response_types.py  settings.py  types.py  update_trade_volumes.py
app/tests/: currency_trade_volume_service_test.py
migrations/: env.py
migrations/versions/: c14a6cd36ba8_create_currency_pair_volume_table.py
